<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.com.example.android.popularmovies.MovieDetailFragment"
    tools:showIn="@layout/activity_movie_detail"
    android:background="#fff">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_name"
        android:id="@+id/movieName"
        android:gravity="center_vertical"
        android:textColor="#FFF"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/fab_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="#6da7ea"
        android:layout_alignParentTop="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/a"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/movieName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/detailImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_year"
        android:id="@+id/yearRelease"
        android:layout_alignTop="@+id/detailImage"
        android:layout_toRightOf="@+id/detailImage"
        android:layout_toEndOf="@+id/detailImage"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_length"
        android:id="@+id/movieLength"
        android:layout_below="@+id/yearRelease"
        android:layout_alignLeft="@+id/yearRelease"
        android:layout_alignStart="@+id/yearRelease" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_rating"
        android:id="@+id/userRating"

        android:layout_below="@+id/movieLength"
        android:layout_alignLeft="@+id/movieLength"
        android:layout_alignStart="@+id/movieLength" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_plot"
        android:id="@+id/plot"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/movieName"
        android:layout_alignEnd="@+id/movieName" />


</RelativeLayout>
